deploys/2026-08-18-avr-field-lengths/force-app/main/default/objects/Case/fields/Longitude__c.field-meta.xml
<CustomField>
    <fullName>Longitude__c</fullName>
    <label>Longitude</label>
    <length>30</length>
    <type>Text</type>
</CustomField>