deploys/2026-08-18-avr-field-lengths/force-app/main/default/objects/Case/fields/Requestor__c.field-meta.xml
<CustomField>
    <fullName>Requestor__c</fullName>
    <label>Requestor</label>
    <length>80</length>
    <type>Text</type>
</CustomField>